--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -109,7 +109,12 @@
     <Content Include="Index.aspx" />
     <Content Include="scripts\ai.0.22.19-build00125.js" />
     <Content Include="scripts\ai.0.22.19-build00125.min.js" />
+    <Content Include="scripts\bootstrap.min.css" />
+    <Content Include="scripts\element.module.js" />
+    <Content Include="scripts\func.module.js" />
     <Content Include="scripts\modules-manager.js" />
+    <Content Include="scripts\modules.manager.js" />
+    <Content Include="scripts\tool.module.js" />
     <Content Include="scripts\use-module.js" />
     <Content Include="scripts\_references.js" />
     <Content Include="Web.config" />
