--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -94,6 +94,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="modules.manager.html" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -115,7 +116,6 @@
     <Content Include="scripts\object.module.js" />
     <Content Include="scripts\test.module.js" />
     <Content Include="scripts\tool.module.js" />
-    <Content Include="scripts\use-module.js" />
     <Content Include="scripts\version.module.js" />
     <Content Include="scripts\_references.js" />
     <Content Include="ueditor\ueditor.all.js" />
